welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while (i<5 && i<nums.length) {
        ^